2005-09-26  Per Bothner  <per@bothner.com>

	* Environment.java (remove, unlink): New methods.
	* Location.java (undefine): New method.
	* SimpleEnvironment.java (remove): Rename to unlink, which takes hash.
	Don't undefine location - do that in remove.
	* ThreadLocation.java (LocationRef.finalize): Just unlink - don't
	undefine the location.

2005-09-25  Per Bothner  <per@bothner.com>

	* Procedure.java (apply): Clean up old debugging left-over.

2005-08-15  thomas kirk  <tk@research.att.com>

	* RunnableClosure.java: New class implementing Runnable.
	Extracted from Future
	* Future.java: Most functionality moved to RunnableClosure.
	Future now just implements a Thread that encapsulates and
	executes a RunnableClosure.
	* Makefile.am: Add RunnableClosure.java.

2005-08-09  Per Bothner  <per@bothner.com>

	* SimpleEnvironment (define): Remove unused local variable prev.

2005-08-07  Per Bothner  <per@bothner.com>

	* NamedLocation.java (setRestore): If restored value is not a Location,
	then clear base.  This fixes a bug caused by sharing done in Future.

2005-08-03  Per Bothner  <per@bothner.com>

	* MethodProc.java (matchFailAsException): Fix thinko.

2005-07-28  Per Bothner  <per@bothner.com>

	* Symbol.java (id, counter): Remove unused fields.

2005-07-23  Per Bothner  <per@bothner.com>

	* Environment.java (INDIRECT_DEFINES): New flag.
	(setIndirectDefines): New method.
	(getGlobal): Add new overload, with abstract method taking hash code.\
	(make(String,Environment)): More precise return type.
	* SimpleEnvironment.java (getLocation):  Update accordingly.
	(addLocation): If INDIRECT_DEFINES, add to parent instead.
	* InheritingEnvironment.java (getLocation): Update accordingly.
	If INDIRECT_DEFINES, create in parent.
	If existing loc has INDIRECT_FLUIDS, copy that attribute.
	* InheritingEnvironment.java (getNumParents, getParent): New methods.

	* CallContext.java (pushedFluids, pushedFluidsCount): New fields.
	(pushFluid, popFluid): New methods.